# iot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  SMARTCARD_UPDATE_SUMMARY.md  answers-example.toml  build.rs  demo_smartcard_insertion.sh  example.sh  hsm.md  hsm_ecdsa.sh  jcardsim.cfg  openssl.md  readme.md  run-piv-pcsc-sim.sh  rust-iot.service  rust-toolchain.toml  settings.example.ini  settings.ini  smartcard-gui.toml  test_hsm.sh  test_smartcard_certificates.sh
.github/: restart-pcscd.sh
.github/workflows/: rust.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/uglyoldbob/iotnode/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/uglyoldbob/iotnode/: MainActivity.java  ServerSetupFragment.java
android/app/src/main/res/layout/: fragment_server_setup.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/uglyoldbob/iotnode/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
cert-common/: Cargo.toml
cert-common/src/: lib.rs  oid.rs  pkcs12.rs
certgen/: Cargo.toml
certgen/src/: lib.rs  ssh.rs  timeout.rs  utils.rs
content/: index.html
content/css/: ca-mobile.css  ca.css
examples/: smartcard_certificate_demo.rs  smartcard_integration.rs
js/: package-lock.json  package.json
js/local-cert-gen/: index.js  package-lock.json  package.json
nfc-desfire/: Cargo.toml
nfc-desfire/src/: lib.rs
smartcard-sim/: .gitignore  README.md  pom.xml  run-simulator.sh
smartcard-sim/src/main/java/com/uglyoldbob/smartcard/sim/: BasicSmartCardApplet.java  SmartCardSimulator.java  VirtualCardCLI.java
smartcard-sim/src/test/java/com/uglyoldbob/smartcard/sim/: CertificateOperationsTest.java  SmartCardSimulatorTest.java  VirtualCardInsertionTest.java
src/: ca.rs  ca_construct.rs  card.rs  cgi-construct.rs  cgi.rs  construct-gui.rs  construct.rs  destroy.rs  hsm2.rs  main.rs  main_config.rs  oid.rs  pkcs12.rs  service.rs  smartcard-gui.rs  test.rs  test2.rs  tpm2.rs  user.rs  utility.rs  webserver.rs
src/ca/: ca_common.rs  ca_usage.rs  mod.rs  windows_privilege.rs
src/prompt/: mod.rs
src/service/: windows.rs
src/smartcard_windows/: mod.rs  smartcard_root.rs
src/webserver/: mod.rs  tls.rs
src/windows/: mod.rs  root.rs
tests/: answers.rs  ca.rs  cgi.rs  ecdsa.rs  smartcard.rs  smartcard_basic.rs  smartcard_cert_basic.rs  smartcard_certificate.rs  smartcard_integration.rs  tpm2.rs  webserver.rs
