[package]
name = "rust-iot"
version = "0.0.1"
authors = ["Thomas Epperson"]
edition = "2021"

[package.metadata.deb]
assets = [["content/css/*", "etc/rust-iot/content/css/", "600" ],
        ["target/release/rust-iot", "usr/bin/rust-iot", "755"],
        ["target/release/rust-iot-construct", "usr/bin/rust-iot-construct", "755"],
        ["target/release/rust-iot-construct-gui", "usr/bin/rust-iot-construct-gui", "755"],
        ["target/release/rust-iot-destroy", "usr/bin/rust-iot-destroy", "755"],
        ["content/js/*", "etc/rust-iot/content/js/", "600"],
        ]

[dependencies]
async-sqlite = "0.2.2"
bincode = "1.3.3"
cms = "0.2.3"
const-oid = "0.9.6"
cryptoki = "0.6.2"
der = "0.7.8"
egui-multiwin = "0.3.1"
futures="0.3.30"
http-body-util = "0.1.0"
hmac = "^0.12"
lazy_static = "1.4.0"
oid = "0.2.1"
pem = "3.0.3"
pin-project-lite = "0.2.13"
pkcs5 = "0.7.1"
rand = "0.8.5"
rfd = "0.14.1"
ring = "0.17.8"
rsa = "0.9.6"
rustls-pki-types = "1.4.1"
scrypt = "0.11.0"
sha1 = "0.10.6"
sha2 = "^0.10"
sha256 = "1.5.0"
tempfile = "3.0.1"
textnonce = "1.0.0"
time = "0.3.34"
tokio-rustls = "0.25.0"
toml = "0.8.11"
url_encoded_data = "0.6.1"
url-escape = "0.1.1"
whoami = "1.5.1"
x509-cert = "0.2.5"
yasna = "0.5.2"
zeroize = "1.7.0"

[dependencies.clap]
version = "4.5.3"
features = ["derive"]

[dependencies.cookie]
version = "0.18.0"
features = ["secure"]

[dependencies.html]
git = "https://github.com/uglyoldbob/html"

[dependencies.hyper]
version = "1.2.0"
features = ["http1", "http2", "server"]

[dependencies.interprocess]
version = "1.2.1"
features = ["tokio"]

[dependencies.multipart]
version = "0.18.0"
default-features = false
features = ["server"]

[dependencies.mysql]
version = "24.0.0"
default-features = false
features = ["default-rustls"]

[dependencies.ocsp]
git = "https://github.com/uglyoldbob/ocsp-rs"

[dependencies.pkcs8]
version = "0.10.2"
features = ["encryption", "pem", "std"]

[dependencies.pkcs12]
version = "0.1.0"
features = ["kdf"]

[dependencies.prompt]
git = "https://github.com/uglyoldbob/prompt.git"
features = ["serde"]

[dependencies.rcgen]
version = "0.13.0"
git = "https://github.com/uglyoldbob/rcgen.git"
branch = "main"
features = ["ring", "pem", "x509-parser"]

[dependencies.runas]
version = "1.2.0"
git = "https://github.com/uglyoldbob/rust-runas.git"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.service]
git = "https://github.com/uglyoldbob/service.git"
features = ["async"]

[dependencies.strum]
version = "0.26.2"
features = ["derive"]

[dependencies.tls-listener]
version = "0.9.1"
features = ["rustls"]
#path="../tls-listener"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["user"] }
tss-esapi = { git = "https://github.com/uglyoldbob/rust-tss-esapi.git", branch = "main3", optional=true, features = ["bundled"]}

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.4"
gag = "1.0.0"
tss-esapi = { git = "https://github.com/uglyoldbob/rust-tss-esapi.git", branch = "main3", optional=true, features = ["bundled", "generate-bindings"]}
winapi = {version = "0.3.9", features = ["winsvc"]}

[features]
default = ["tpm2" ]
tpm2 = [ "dep:tss-esapi" ]

[[bin]]
name = "rust-iot"
path = "src/main.rs"

[[bin]]
name = "rust-iot-construct"
path = "src/construct.rs"

[[bin]]
name = "rust-iot-construct-gui"
path = "src/construct-gui.rs"

[[bin]]
name = "rust-iot-destroy"
path = "src/destroy.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "test2"
path = "src/test2.rs"
