[package]
name = "rust-iot"
version = "0.1.0"
authors = ["Thomas Epperson"]
edition = "2021"

[package.metadata.deb]
assets = [["content/css/*", "etc/rust-iot/content/css/", "600" ],
        ["target/release/rust-iot", "usr/bin/rust-iot", "755"],
        ["target/release/rust-iot-construct", "usr/bin/rust-iot-construct", "755"],
        ["target/release/rust-iot-construct-gui", "usr/bin/rust-iot-construct-gui", "755"],
        ["target/release/rust-iot-destroy", "usr/bin/rust-iot-destroy", "755"],
        ["content/js/*", "etc/rust-iot/content/js/", "600"],
        ]

[dependencies]
async-sqlite = "0.5.2"
base64 = "0.22.1"
bincode = "1.3.3"
cgi = { version = "0.8.0", git = "https://github.com/uglyoldbob/rust-cgi.git", features = ["async"] }
chrono = "0.4.41"
cms = "0.2.3"
const-oid = "0.9.6"
cryptoki = "0.6.2"
der = "0.7.8"
egui-multiwin = "0.5.1"
enum_dispatch = "0.3.13"
env_logger = "0.11.8"
function_name = "0.3.0"
futures="0.3.30"
html-escape = "0.2.13"
http-body-util = "0.1.0"
hmac = "^0.12"
lazy_static = "1.4.0"
pem = "3.0.4"
pin-project-lite = "0.2.13"
pkcs5 = "0.7.1"
rand = "0.8.5"
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "blocking", "native-tls", "default-tls"] }
ring = "0.17.14"
rpassword = "7.3.1"
rsa = "0.9.6"
rustls-pki-types = "1.4.1"
scrypt = "0.11.0"
sha1 = "0.10.6"
pcsc = { version = "2.7.2", optional = true }
sha2 = "^0.10"
sha256 = "1.5.0"
simple_logger = "5.0.0"
ssh-encoding = "0.2.0"
tempfile = "3.10.0"
time = "0.3.34"
tokio-rustls = "0.26.0"
toml = "0.9.8"
untrusted = "0.9.0"
urlencoding = "2.1.3"
url_encoded_data = "0.6.1"
url-escape = "0.1.1"
whoami = "1.5.1"
x509-cert = "0.2.5"
yasna = "0.5.2"
zeroize = "1.7.0"
zip = "6.0.0"
futures-util = "0.3.31"

[dependencies.card]
git = "https://github.com/uglyoldbob/smartcard.git"
optional = true

[dependencies.cert-common]
version = "0.2.1"
git = "https://github.com/uglyoldbob/cert-common.git"

[dependencies.clap]
version = "4.5.3"
features = ["derive"]

[dependencies.cookie]
version = "0.18.0"
features = ["secure"]

[dependencies.ecdsa]
version = "0.16.9"
features = ["der", "verifying"]

[dependencies.html]
git = "https://github.com/uglyoldbob/html"

[dependencies.hyper]
version = "1.2.0"
features = ["http1", "http2", "server"]

[dependencies.interprocess]
version = "2.0.1"
features = ["tokio"]

[dependencies.multer]
version = "3.1.0"
features = ["tokio"]

[dependencies.mysql]
version = "25.0.0"
default-features = false
features = ["default-rustls"]

[dependencies.ocsp]
git = "https://github.com/uglyoldbob/ocsp-rs"

[dependencies.p256]
version = "0.13.2"
features = ["ecdsa"]

[dependencies.pkcs8]
version = "0.10.2"
features = ["encryption", "pem", "std"]

[dependencies.rcgen]
version = "0.13.0"
git = "https://github.com/uglyoldbob/rcgen.git"
branch = "attributes"
features = ["ring", "pem", "x509-parser"]

[dependencies.runas]
version = "1.2.0"
git = "https://github.com/uglyoldbob/rust-runas.git"

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.service]
version = "0.2.0"
features = ["async", "serde", "prompt", "egui-prompt"]

[dependencies.ssh-key]
version = "0.6.7"
features = [ "rsa", "ed25519" ]

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.tls-listener]
version = "0.9.1"
features = ["rustls"]
#path="../tls-listener"

[dependencies.tokio]
version = "1.36.0"
features = ["full"]

[dependencies.userprompt]
version = "0.3.6"
features = ["serde", "egui"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", features = ["user"] }
tss-esapi = { git = "https://github.com/uglyoldbob/rust-tss-esapi.git", branch = "main3", optional=true, features = ["bundled", "serde"]}

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.4"
tss-esapi = { git = "https://github.com/uglyoldbob/rust-tss-esapi.git", branch = "main3", optional=true, features = ["bundled", "serde", "generate-bindings"]}
winapi = {version = "0.3.9", features = ["aclapi", "impl-default", "winsvc"]}
windows-acl = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0"
async-trait = "0.1"
hex = "0.4"
openssl = "0.10.75"
predicates = "3.1"
russh = "0.55.0"
russh-keys = "0.49.2"
serial_test = "3.0"

[features]
default = ["smartcard"]
tpm2 = [ "dep:tss-esapi" ]
smartcard = [ "dep:pcsc", "dep:card" ]

[[bin]]
name = "rust-iot"
path = "src/main.rs"

[[bin]]
name = "rust-iot-cgi"
path = "src/cgi.rs"

[[bin]]
name = "rust-iot-cgi-construct"
path = "src/cgi-construct.rs"

[[bin]]
name = "rust-iot-construct"
path = "src/construct.rs"

[[bin]]
name = "rust-iot-construct-gui"
path = "src/construct-gui.rs"

[[bin]]
name = "rust-iot-destroy"
path = "src/destroy.rs"

[[bin]]
name = "smartcard-gui"
path = "src/smartcard-gui.rs"
required-features = ["smartcard"]

#[patch."https://github.com/uglyoldbob/smartcard.git"]
#card = { path = "../smartcard" }