[package]
name = "cert-common"
version = "0.1.0"
edition = "2021"

[dependencies]
cms = "0.2.3"
const-oid = "0.9.6"
der = "0.7.8"
hmac = "0.12.1"
lazy_static = "1.4.0"
pkcs5 = "0.7.1"
rand = "0.8.5"
rsa = "0.9.6"
sha2 = "0.10.8"
x509-cert = "0.2.5"
yasna = "0.5.2"
zeroize = "1.7.0"

[dependencies.ocsp]
git = "https://github.com/uglyoldbob/ocsp-rs"

[dependencies.pkcs8]
version = "0.10.2"
features = ["encryption", "pem", "std"]

[dependencies.pkcs12]
version = "0.1.0"
features = ["kdf"]

[dependencies.rcgen]
version = "0.13.0"
git = "https://github.com/uglyoldbob/rcgen.git"
branch = "attributes"
features = ["ring", "pem", "x509-parser"]

[dependencies.serde]
version = "1.0.197"
features = ["derive"]

[dependencies.ssh-key]
version = "0.6.6"
features = [ "rsa", "ed25519" ]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui = "0.27.2"
rfd = "0.14.1"
userprompt = { version = "0.2.0", features = ["serde", "egui"] }
service = { git = "https://github.com/uglyoldbob/service.git", features = ["async"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
userprompt = { version = "0.2.0", features = ["serde"] }