[package]
name = "certgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
der = "0.7.8"
getrandom = { version = "0.2.14", features = ["js"]}
js-sys = "0.3.68"
log = "0.4.21"
pkcs8 = { version = "0.10.2", features = ["encryption", "pkcs5"] }
rand = "0.8.5"
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"]}
pem = "3.0.4"
wasm-bindgen = "0.2.84"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = [
    "console",
    "Blob",
    "BlobPropertyBag",
    "CssStyleDeclaration",
    "Document",
    "Element",
    "File",
    "FilePropertyBag",
    "HtmlAnchorElement",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlLinkElement",
    "Node",
    "Url",
    "Window"
] }
zeroize = "1.7.0"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.rcgen]
version = "0.13.0"
git = "https://github.com/uglyoldbob/rcgen.git"
branch = "attributes"
features = ["ring", "pem", "x509-parser"]

[dependencies.cert-common]
path = "../cert-common"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"